--- a/style.css
+++ b/style.css
@@ -6,4 +6,16 @@ p {
      color: rgb(0, 0, 0);
 }
 
-h1 {font-style: oblique;}
+h1 {
+    font-style: oblique;
+}
+
+.marília {
+    color: black;
+}
+
+
+
+.lila2 {
+    width: 100%; ;
+}
